# Language-Learning-Audio-Player

./: .env.local  .gitmodules  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  README_SETUP.md  docker-compose.yaml  package.json
.cursor/rules/: app.md  architecture.mdc  audio-processing.mdc  backend-architecture.mdc  code-style.mdc  components.mdc  cursor-rules-location.mdc  data-fetching.mdc  git-commits.mdc  project-structure.mdc  project.mdc  security.mdc  status-tracking.mdc  tech-stack.mdc
RustWebAssembly/: Cargo.toml  README.md  lib.rs  wasm-build.ps1
RustWebAssembly/audio_processor/: Cargo.toml
RustWebAssembly/audio_processor/src/: lib.rs
app/: package-lock.json
app/lib/: auth.js
audio-player-backend/: audio_handlers.go  audio_import_handler.go  main.go
backend/: .env  .env.example  CONFIG_GUIDE.md  ENV_VARIABLES.md  REFACTORING_PLAN.md  admin_handlers.go  audio_handlers.go  audio_import_handler.go  auth_handlers.go  course_handlers.go  custom_tracks_handler.go  go.mod  go.sum  main.go  middleware.go  models.go  token.go  track_management_handlers.go  update_imports.sh
backend/backup_old_files/: 004_custom_tracks.down.sql  004_custom_tracks.up.sql  admin_handlers.go  audio_import_handler.go  course.go  custom_tracks_handler.go  db.go  main.go  middleware.go  track.go  track_management_handlers.go  user.go
backend/configs/: app.yaml
backend/database/: README.md  migrations.go  seeder.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/scripts/: README.md  init-db.sql
scripts/: init-db.sql  update-status.js
web-client/: .env.local  next.config.ts  package-lock.json  package.json
web-client/lib/: api.js  (+2 more)
(+105 files in other folders)
