[package]
name = "audio-processor"
version = "0.1.0"
authors = ["Language Learning Audio Player"]
edition = "2021"
description = "Rust WebAssembly audio processing library"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
web-sys = { version = "0.3.63", features = [
  "console",
] }
serde = "1.0.158"
serde_derive = "1.0.158"
serde_json = "1.0.94"

[profile.release]
opt-level = 3
lto = true 