[package]
name = "audio_processor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Audio processing library for language learning"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [
  "console",
  "AudioBuffer",
  "AudioContext",
  "AudioNode",
  "AudioParam",
  "AudioBufferSourceNode",
  "AudioDestinationNode",
  "AudioProcessingEvent",
  "AnalyserNode",
  "BiquadFilterNode",
  "OscillatorNode",
  "GainNode",
  "MediaStreamAudioSourceNode",
  "WaveShaperNode",
  "ChannelMergerNode",
  "ChannelSplitterNode",
  "ConvolverNode",
  "DelayNode",
  "DynamicsCompressorNode",
  "Window"
]}
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
pitch-detection = "0.3"
rubato = "0.14"
fundsp = "0.13"
realfft = "3.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 